--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://172.20.0.2:5432/helpme
 spring.datasource.username=postgres
 spring.datasource.password=123@mudar
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.sormat_sql=true
