--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:postgresql://172.20.0.2:5432/helpme
+spring.datasource.url=jdbc:postgresql://172.20.0.3:5432/helpme
 spring.datasource.username=postgres
 spring.datasource.password=123@mudar
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.sormat_sql=true
